[gd_scene load_steps=7 format=2]

[ext_resource path="res://Componentes/icon.png" type="Texture" id=1]
[ext_resource path="res://Codigo/Shop.gd" type="Script" id=2]
[ext_resource path="res://Armas/ArmaSniper.tscn" type="PackedScene" id=3]
[ext_resource path="res://Armas/ArmaRifle.tscn" type="PackedScene" id=4]
[ext_resource path="res://Armas/ArmaBase.tscn" type="PackedScene" id=5]

[sub_resource type="CircleShape2D" id=1]

[node name="Shop" type="Node2D"]
position = Vector2( 500, 350 )
script = ExtResource( 2 )
lista_possiveis_itens = [ ExtResource( 5 ), ExtResource( 4 ), ExtResource( 3 ), ExtResource( 3 ) ]
lista_posicao_item = [ Vector2( -50, -150 ), Vector2( -50, -50 ), Vector2( -50, 50 ), Vector2( -50, 150 ) ]

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 3, 8 )
texture = ExtResource( 1 )

[node name="BotaoReroll" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="BotaoReroll"]
position = Vector2( -73, -247 )
scale = Vector2( 3, 3 )
shape = SubResource( 1 )

[node name="GerenteItens" type="Node2D" parent="."]

[connection signal="area_entered" from="BotaoReroll" to="." method="_on_BotaoReroll_area_entered"]
[connection signal="area_exited" from="BotaoReroll" to="." method="_on_BotaoReroll_area_exited"]
